# markdown-graph

./: .gitignore  CONTRIBUTING.md  README.en.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-16-mdgraph-foundation.md  2026-06-17-mdgraph-slice2-structural-index.md  2026-06-17-mdgraph-slice3-vector-retrieval.md  2026-06-17-mdgraph-slice4-semantic-extraction.md  2026-06-17-mdgraph-slice5-graph-rrf.md  2026-06-18-mdgraph-slice6-incremental-cli.md  2026-06-20-mdgraph-slice7-real-providers-demo.md  2026-06-20-mdgraph-slice8-local-llm-extractor.md  2026-06-21-mdgraph-slice9-hub-debias.md
docs/superpowers/specs/: 2026-06-16-markdown-graph-engine-design.md  2026-06-17-mdgraph-slice2-structural-index-design.md  2026-06-17-mdgraph-slice3-vector-retrieval-design.md  2026-06-17-mdgraph-slice4-semantic-extraction-design.md  2026-06-17-mdgraph-slice5-graph-rrf-design.md  2026-06-17-mdgraph-slice6-incremental-cli-design.md  2026-06-20-mdgraph-slice7-real-providers-demo-design.md  2026-06-20-mdgraph-slice8-local-llm-extractor-design.md  (+4 more)
examples/: README.md  run_demo.py
examples/ai_kb/: agent.md  ann.md  chunking.md  claude.md  embedding.md  evaluation.md  fine-tuning.md  guardrails.md  index.md  knowledge-graph.md  lancedb.md  llm.md  multimodal.md  planning.md  prompt-engineering.md  rag.md  reranking.md  semantic-search.md  tool-use.md  vector-db.md
src/mdgraph/: __init__.py  chunk.py  cli.py  embed.py  engine.py  extract.py  fusion.py  ids.py  indexer.py  ingest.py  models.py  parse.py  retrieve.py  sag_retrieve.py
tests/: test_anthropic_extractor.py  test_chunk.py  test_cli.py  test_embed.py  test_embedder_registry.py  test_engine_dual.py  test_engine_extract.py  test_engine_retrieve.py  test_engine_source_persist.py  test_examples_corpus.py  test_extract.py  test_fastembed_provider.py  test_file_llm_retriever.py  test_fusion.py  test_graph_store_batch.py  test_graph_store_crud.py  test_graph_store_delete.py  test_graph_store_expand.py  test_graph_store_get_chunks.py  test_graph_store_reclaim.py  test_graph_store_subgraph.py  test_graph_store_traversal.py  test_ids.py  test_index_progress.py  test_indexer_embed.py  test_indexer_extract.py  test_indexer_incremental.py  test_indexer_links.py  test_indexer_structure.py  test_ingest.py  test_local_llm_extractor.py  test_models.py  test_openai_embedder.py  test_parse_links_tags.py  test_parse_structure.py  test_providers_mock.py  test_retrieve.py  test_retrieve_dual.py  test_run_demo.py  test_sag_extractor.py  (+7 more)
webapp/: README.md
webapp/backend/: app.py  archive.py  config_schema.py  config_store.py  engine_provider.py  jobs.py  requirements.txt  schemas.py  settings.py
webapp/frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+64 files in other folders)
