[project]
name = "mdgraph"
version = "0.1.0"
description = "Markdown knowledge graph + vector dual-engine retrieval"
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0",
    "networkx>=3.0",
    "lancedb>=0.6",
    "pydantic>=2.0",
    "numpy>=1.24",
    "typer>=0.9",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
voyage = ["voyageai>=0.2"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdgraph"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
