[project]
name = "mdgraph"
version = "0.1.0"
description = "Markdown knowledge graph + vector dual-engine retrieval"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "jouryjc", email = "jouryjc0409@gmail.com" }]
keywords = [
    "markdown",
    "knowledge-graph",
    "vector-search",
    "rag",
    "semantic-search",
    "embeddings",
    "retrieval",
    "lancedb",
    "networkx",
    "hybrid-search",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0",
    "networkx>=3.0",
    "lancedb>=0.6",
    "pydantic>=2.0",
    "numpy>=1.24",
    "typer>=0.9",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
]

[project.scripts]
mdgraph = "mdgraph.cli:main"

[project.urls]
Homepage = "https://github.com/Jouryjc/markdown-graph"
Repository = "https://github.com/Jouryjc/markdown-graph"
Issues = "https://github.com/Jouryjc/markdown-graph/issues"

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9"]
anthropic = ["anthropic>=0.30"]
voyage = ["voyageai>=0.2"]
local = ["fastembed>=0.3", "openai>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdgraph"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# `l` is an intentional local name for link/line throughout parse/test code.
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately keep unused imports (importability checks) and use
# late imports after path/env setup.
"tests/**" = ["F401", "E402"]
